# MyVocaloid

./: .gitignore  Makefile  README.md  pyproject.toml
data/: duration_indexs.npy  notenum_indexs.npy
data/json/: encode_params.json  names.json
data/npy/: duration_indexs.npy  lyric_indexs.npy  notenum_indexs.npy
data/phoneme/: list.json
master/ust/json/: 1st_color.json  2018.json  ARROW.json  BC.json  BRD.json  Baptism.json  COZMIC_HEART.json  Choir.json  Closetoyou.json  Creuzer.json  Dreaming_with_U.json  ELECT.json  ERROR.json  FACE.json  FLARE.json  FlashBlack.json  From13th.json  FutureSky.json  GLIDE.json  Gekko_Rhapsody.json  GraveKeeper.json  HYBRID.json  Hearts.json  LOVE_DISCOTHEQUE.json  La_Rouge.json  LostRose.json  Myself.json  Paranoid.json  RelightMyFire.json  SpiralDays.json  WAVE.json  Worlds_End_Celebrate.json  aaaa.json  aimaiexe.json  ainouta.json  akatonbo.json  alps3030m.json  another_life.json  birthday.json  boukyakumoyou.json  (+70 more)
myvocaloid/: audio_utils.py  combine_audio.py  constants.py  data_manager.py  file_encoder.py  generate_audio.ipynb  generate_audio.py  pithshifter.py  sing.py  train.ipynb  train.py
myvocaloid/.ipynb_checkpoints/: audio_utils-checkpoint.py  file_encoder-checkpoint.py  generate_audio-checkpoint.ipynb  generate_audio-checkpoint.py  train-checkpoint.ipynb  train-checkpoint.py
src/: pithshifter.py
