[project]
name = "myvocaloid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "dub>=0.16.2",
    "librosa>=0.10.2.post1",
    "py>=1.11.0",
    "pydub>=0.25.1",
    "pyrubberband>=0.4.0",
    "soundfile>=0.12.1",
    "tensorflow>=2.18.0",
]
