[project]
name = "myvocaloid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "jedi>=0.19.2",
    "jupyter>=1.1.1",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "pyrubberband>=0.4.0",
    "soundfile>=0.12.1",
    "tensorflow>=2.18.0",
]
